chezzzaok: fixed blackjack

--- a/chezzzaok/app/src/main/res/values/strings.xml
+++ b/chezzzaok/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">chezzzaok</string>
+    <string name="hello">Simple BlackJack</string>
+    <string name="app_name">Simple Blackjack</string>
+    <string name="twist">Twist</string>
+    <string name="stick">Stick</string>
+    <string name="play">Play</string>
+    <string name="add_player">Add Player</string>
+    <string name="remove_player">Remove Player</string>
+    <string name="redeal">Redeal</string>
+	<string name="player_select">Please Select a Player</string>
 </resources>
